Fixed overflow issue

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -15,15 +15,24 @@ body {
     width: 100%;
 }
 
+.main-container {
+    width: 100%;
+    overflow: hidden;
+    // grid-template-columns: minmax(20px, 1fr) minmax(auto, 1304px) minmax(20px, 1fr);
+}
+
+
 main {
     min-height: 100vh;
     padding-bottom: 100px;
 
-    @include for-mobile-layout {
-        padding-bottom: 60px;
-        overflow: hidden;
-    }
+    // @include for-mobile-layout {
+    //     padding-bottom: 60px;
+    //     overflow: hidden;
+    // }
 }
+
+
 
 button {
     cursor: pointer;
@@ -32,7 +41,4 @@ button {
 a {
     text-decoration: none;
     color: unset;
-
-
-
 }
