--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,18 +1,15 @@
-// .main-layout {
-//     display: grid;
-//     grid-template-columns: minmax(auto, 100px) 1fr minmax(auto, 100px);
-// }
+.main-layout {
+    display: grid;
+    grid-template-columns: minmax(10px, 200px) minmax(1fr, 1400px) minmax(10px, 200px);
+}
 
-// // 24px
+.main-layout>* {
+    grid-column: 2;
+}
 
-
-// .main-layout>* {
-//     grid-column: 2;
-// }
-
-// .main-layout .full {
-//     grid-column: 1/-1;
-// }
+.main-layout .full {
+    grid-column: 1/-1;
+}
 
 // .gig-index-layout {
 //     display: grid;
