--- a/src/assets/styles/pages/_PurchasePage.scss
+++ b/src/assets/styles/pages/_PurchasePage.scss
@@ -1,5 +1,4 @@
 .gig-purchase {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-content: center;
     gap: 40px;
